--- a/kludge.Rmd
+++ b/kludge.Rmd
@@ -1,6 +1,5 @@
 ---
-title: 'Conversational Kludge: What Past Conceptions of Educational Twitter Hashtags
-  Miss'
+title: "The Hashtag-Thread Mashup: How Educators Talk to Each Other in Twitter #Edchat"
 author: "K. Bret Staudt Willet"
 date: "11/08/2019"
 output:
@@ -37,7 +36,7 @@ library(ggraph)
 
 Having completed the steps in the setup.Rmd file, you now have the dataset stored in your local repository and can load it as usual. This project uses Twitter #Edchat data that have been run through the `rtweet` R package, which queries the Twitter API to return the most complete set of tweet metadata available, while also removing deleted and protected tweets. See https://rtweet.info/ for details on `rtweet`.
 
-```{r, include=FALSE}
+```{r get-data, include=FALSE}
 edchat_og <- read.csv("edchat_rtweet_df.csv", 
                    header=TRUE, 
                    colClasses= c(status_id='character',
@@ -97,13 +96,12 @@ freq_tweeters <- edchat %>%
     mutate(tweets_per_month = round(tweets_made_edchat / n_months, 2)) %>%
     arrange(desc(tweets_per_month))
 
-monthly_tweets_mean <- freq_tweeters$tweets_per_month %>% mean %>% round(2)
-monthly_tweets_sd <- freq_tweeters$tweets_per_month %>% sd %>% round(2)
-monthly_tweets_median <- freq_tweeters$tweets_per_month %>% median %>% round(2)
-monthly_tweets_min <- freq_tweeters$tweets_per_month %>% min %>% round(2)
-monthly_tweets_max <- freq_tweeters$tweets_per_month %>% max %>% round(2)
-
-paste("Tweets per month per user:"); paste("Mean =", monthly_tweets_mean); paste("Standard Deviation =", monthly_tweets_sd); paste("Median =", monthly_tweets_median); paste("Range =", monthly_tweets_min, "to", monthly_tweets_max)
+freq_tweeters %>% summarize(mean = round(mean(tweets_per_month), 2),
+                            sd = round(sd(tweets_per_month), 2),
+                            median = round(median(tweets_per_month), 2),
+                            min = round(min(tweets_per_month), 2),
+                            max = round(max(tweets_per_month), 2)
+                            )
 ```
 
 *Minimal participation.* Look at one-time tweeters.
@@ -113,6 +111,14 @@ one_timers <- freq_tweeters %>% filter(tweets_made_edchat==1)
 paste0("Tweeters who contributed only one tweet to #Edchat: ", 
       nrow(one_timers),
       " (", round(100 * nrow(one_timers) / n_tweeters, 2), "%)"
+      )
+```
+
+```{r, include=TRUE, echo=FALSE}
+n_monthly_tweeters <- freq_tweeters %>% filter(tweets_made_edchat>=8) %>% nrow()
+p_monthly_tweeters <- round(100 * n_monthly_tweeters / n_tweeters, 2)
+paste0("Tweeters who tweeted at least monthly to #Edchat: ", 
+      n_monthly_tweeters, " (", p_monthly_tweeters, "%)."
       )
 ```
 
@@ -229,7 +235,6 @@ paste0(n_edchat_only, " tweets contain the #Edchat hashtag alone (",
 Finally, look at the top-20 hashtags that occur alongside #Edchat:
 
 ```{r hashtag_table, include=TRUE, echo=FALSE}
-
 hashtag_table <- edchat_hashtag$text %>% 
         str_extract_all(hashtag_regex, simplify=TRUE) %>%
         tolower() %>%
@@ -245,41 +250,44 @@ knitr::kable(head(hashtag_table, 30),
 
 **How are participants connected to each other in #Edchat?**
 
-First, calculate *descriptive statistics for replies-per-tweeter*.
-
 ```{r, include=TRUE, echo=FALSE}
-freq_replies <- edchat$reply_to_status_id %>%
+freq_replies <- edchat %>%
+        filter(!is.na(reply_to_status_id)) %>%
+        pull(user_id) %>% 
         table %>%
         as.data.frame() %>%
         arrange(desc(Freq)) %>%
-        rename(status_id = ".",
-               reply_count = Freq)
-n_reply_tweets <- sum(freq_replies$reply_count)
+        rename(user_id = ".",
+               n_replies = Freq)
+n_reply_tweets <- sum(freq_replies$n_replies)
 n_reply_tweeters <- nrow(freq_replies)
 n_no_reply_tweeters <- n_tweeters - nrow(freq_replies)
 p_reply_tweeters <- round(100 * n_reply_tweeters / n_tweeters, 2)
 
 paste0(n_reply_tweeters, " (", p_reply_tweeters, 
-       "% of all tweeters) replied to someone.")
+       "% of all #Edchat tweeters) replied to someone, in ", n_reply_tweets, 
+       " reply tweets.")
 ```
 
 ```{r, include=TRUE, echo=FALSE}
-freq_replies %>%
-      summarize(mean = round(mean(reply_count), 2),
-                sd = round(sd(reply_count), 2),
-                median = median(reply_count),
-                min = min(reply_count),
-                max = max(reply_count)
-                )
-```
-
-```{r, include=TRUE, echo=FALSE}
-one_time_repliers <- freq_replies %>% filter(reply_count == 1)
-multi_repliers <- freq_replies %>% filter(reply_count > 1)
+one_time_repliers <- freq_replies %>% filter(n_replies == 1)
+multi_repliers <- freq_replies %>% filter(n_replies > 1)
 n_multi_repliers <- nrow(multi_repliers)
 p_multi_repliers <- round(100* n_multi_repliers / n_tweeters, 2)
 
 paste0(n_multi_repliers, " (" , p_multi_repliers, "% of all #Edchat tweeters) replied more than once.")
+```
+
+**Replies per replier:**
+
+```{r, include=TRUE, echo=FALSE}
+freq_replies %>%
+      summarize(mean = round(mean(n_replies), 2),
+                sd = round(sd(n_replies), 2),
+                median = median(n_replies),
+                min = min(n_replies),
+                max = max(n_replies)
+                )
 ```
 
 **hashtag-thread mashup**
@@ -356,21 +364,38 @@ edchat_expanded_og <- read.csv("edchat_expanded.csv",
            )
 ```
 
-```{r, include=FALSE}
-freq_replies_expanded <- edchat_expanded_og$reply_to_status_id %>% 
-    table() %>% 
-    as.data.frame() %>% 
-    arrange(desc(Freq)) %>%
-    rename(status_id = ".",
-           reply_count = Freq) %>%
-    mutate(status_id = as.character(status_id)) 
+```{r, include=TRUE, echo=FALSE}
+freq_replies_expanded <- edchat_expanded_og %>% 
+        filter(!is.na(reply_to_status_id)) %>%
+        pull(user_id) %>%
+        table() %>% 
+        as.data.frame() %>% 
+        arrange(desc(Freq)) %>%
+        rename(status_id = ".",
+               n_replies = Freq)
+freq_replies_expanded %>%
+      summarize(mean = round(mean(n_replies), 2),
+                sd = round(sd(n_replies), 2),
+                median = median(n_replies),
+                min = min(n_replies),
+                max = max(n_replies)
+                )
 ```
 
 ```{r, include=FALSE}
 url_regex <- "http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+"
 
+reply_count_expanded <- edchat_expanded_og %>% 
+        pull(reply_to_status_id) %>%
+        table() %>% 
+        as.data.frame() %>% 
+        arrange(desc(Freq)) %>%
+        rename(status_id = ".",
+               reply_count = Freq) %>%
+        mutate(status_id = as.character(status_id))
+
 edchat_expanded <- edchat_expanded_og %>% 
-    left_join(freq_replies_expanded, by='status_id') %>% 
+    left_join(reply_count_expanded, by='status_id') %>% 
     mutate(reply_count = ifelse(is.na(reply_count), 0, reply_count),
            has_edchat = ifelse(str_detect(text, "#[Ee][Dd][Cc][Hh][Aa][Tt]"), TRUE, FALSE),
            in_thread = ifelse(!is.na(reply_to_status_id) | reply_count != 0, TRUE, FALSE),
@@ -438,12 +463,12 @@ n_repliers_without_only <- repliers_without_edchat %>%
         nrow()
 p_repliers_without_only <- round(100 * n_repliers_without_only / n_repliers_expanded, 2)
 
-paste0(n_repliers_with_only, " (", p_repliers_with_only, "%) contributors to the #Edchat hashtag-thread mashup always included the #Edchat hashtag in their replies; ", n_repliers_both, " (", p_repliers_both, "%) contributors sometimes included the hashtag, sometimes not; and ", n_repliers_without_only, " (", p_repliers_without_only, "%) contributors never included the #Edchat hashtag in their replies.")
+paste0(n_repliers_with_only, " (", p_repliers_with_only, "%) contributors always included the #Edchat hashtag in their replies."); paste0(n_repliers_both, " (", p_repliers_both, "%) contributors sometimes included the hashtag, sometimes not."); paste0(n_repliers_without_only, " (", p_repliers_without_only, "%) contributors never included the #Edchat hashtag in their replies.")
 ```
 
 **Time Frame**
 
-```{r, include=FALSE}
+```{r, include=TRUE, echo=FALSE}
 date_start_expanded <- min(replies_expanded$created_at)
 date_end_expanded <- max(replies_expanded$created_at)
 n_months_expanded <- time_length(date_end_expanded - date_start_expanded, unit="months")
@@ -466,7 +491,7 @@ paste0("The #Edchat hashtag-thread mashup ranged from ", date(date_start_expande
 9. Look at the difference in average number of *retweets* per tweet.
 10. Look at the difference in average number of *replies* per tweet.
 
-```{r table2, include=TRUE, echo=FALSE}
+```{r table2, include=TRUE, echo=FALSE, message=FALSE}
 table2 <- replies_expanded %>% 
         group_by(has_edchat) %>%
         summarize(during_sync = round(100 * length(which(is_sync)) / 
@@ -484,10 +509,13 @@ table2 <- replies_expanded %>%
                   like_mean = round(mean(favorite_count), 2),
                   retweet_mean = round(mean(retweet_count), 2),
                   reply_mean = round(mean(reply_count), 2)
-                  )
+                  ) %>%
+        arrange(desc(has_edchat))
+
+#write.csv(table2, "table_with_without.csv", row.names=FALSE)
 knitr::kable(table2, 
              align='l',
-             col.names=c("With #Edchat", "During Sync %", "Self-reply %",
+             col.names=c("With #Edchat", "Sync %", "Self-reply %",
                          "Words", "Characters", "Sentiment", "Hashtags",
                          "Links", "Likes", "RTs", "Replies")
              )
@@ -537,7 +565,7 @@ max_degree <- reply_graph %>% vertex_attr('degree') %>% max()
 
 #reply_graph %>% edge_attr('in_out') %>% mean() %>% round(2)
 
-paste0("The network of the #Edchat hashtag-thread mashup has ", n_nodes, " nodes and ", n_edges, " edges,. The network has a diameter of ", diameter, ", a transitivity score of ", p_transitivity, "%, and a reciprocity score of ", p_reciprocity, "%. In addition, the mean degree is ", mean_degree, " (SD = ", sd_degree, ") with a median degree of ", median_degree, ". Finally the minimum degree is ", min_degree, " and the maximum degree is ", max_degree, ".")
+paste0("The network of the #Edchat hashtag-thread mashup has ", n_nodes, " nodes and ", n_edges, " edges."); paste0("The network has a diameter of ", diameter, ", a transitivity score of ", p_transitivity, "%,"); paste0(" and a reciprocity score of ", p_reciprocity, "%."); paste0("In addition, the mean degree is ", mean_degree, " (SD = ", sd_degree, ") with a median degree of ", median_degree, "."); paste0(" Finally the minimum degree is ", min_degree, " and the maximum degree is ", max_degree, ".")
 ```
 
 ```{r, include=FALSE}
@@ -608,7 +636,7 @@ coded_sample_without <- coded_sample_without_og %>%
            )
 ```
 
-```{r, include=TRUE, echo=FALSE}
+```{r, include=FALSE}
 purpose_sums_with <- coded_sample_with %>%
     summarize(self = sum(self),
               others = sum(others),
@@ -632,17 +660,9 @@ x2_purpose  <- sig_purpose$statistic %>% as.vector()
 df_purpose <- sig_purpose$parameter %>% as.vector()
 p_purpose  <- sig_purpose$p.value %>% as.vector()
 d_purpose  <- compute.es::chies(x2_purpose, n = 200)$d %>% abs()
-
-paste("The two-way table test of association between the presence of the keyword #edchat and tweet purpose had a chi-square value of", round(x2_purpose,2), ", (df =", df_purpose, "), p = ", round(p_purpose,4), "and an effect size d =", round(d_purpose,2), ".")
 ```
 
-Print the contingency table and the results of the chi-square test. 
-
-```{r, include=TRUE, echo=FALSE}
-matrix_purpose_sums; sig_purpose
-```
-
-```{r, include=TRUE, echo=FALSE}
+```{r, include=FALSE}
 discourse_sums_with <- coded_sample_with %>%
     summarize(cognitive = sum(cognitive),
               interactive = sum(interactive),
@@ -664,19 +684,9 @@ x2_discourse  <- sig_discourse$statistic %>% as.vector()
 df_discourse <- sig_discourse$parameter %>% as.vector()
 p_discourse  <- sig_discourse$p.value %>% as.vector()
 d_discourse  <- compute.es::chies(x2_discourse, n = 200)$d %>% abs()
-
-paste("The two-way table test of association between the presence of the keyword #edchat and tweet discourse had a chi-square value of", round(x2_discourse,2), ", (df =", df_discourse, "), p = ", round(p_discourse,4), "and an effect size d =", round(d_discourse,2), ".")
-```
-
-Print the contingency table and the results of the chi-square test. 
-
-```{r, include=TRUE, echo=FALSE}
-matrix_discourse_sums; sig_discourse
 ```
 
 **Visualize these differences in tweet purpose and tweet discourse in replies with and without #Edchat**
-
-First, calculate margins of error (moe).
 
 ```{r, include=FALSE}
 # for 95% confidence level, sample size = 100, rounded to 4 digits
@@ -699,10 +709,9 @@ in_or_out_purp <- factor(c(rep(colnames(matrix_purpose_sums)[1], 4),
                          levels=colnames(matrix_purpose_sums), ordered=TRUE)
 mydata_purp <- data.frame(purposes, values_purp, moe_purp, in_or_out_purp) %>%
     mutate(purposes = factor(purposes, levels=c(rownames(matrix_purpose_sums))))
-mydata_purp
 ```
 
-Now, display the plot.
+First, calculate margins of error (moe); then display the plot of tweet purposes.
 
 ```{r, include=TRUE, echo=FALSE}
 ggplot(data=mydata_purp, 
@@ -718,7 +727,7 @@ ggplot(data=mydata_purp,
                   width = 0.2, 
                   position = position_dodge(width=0.5)
                   ) +
-    scale_fill_brewer(palette="Set1") +
+    scale_fill_manual(values = c("#0072B2", "#D55E00")) +
     theme(panel.background = element_rect(fill = "white", colour = "white"),
           panel.grid.major = element_blank(),
           panel.grid.minor = element_blank(),
@@ -734,7 +743,19 @@ ggplot(data=mydata_purp,
 #ggsave("tweet_purpose_with_without.png", width = 1 * 16, height = 1 * 9)
 ```
 
+```{r, include=TRUE, echo=FALSE}
+paste0("The two-way table test of association between the presence of the keyword #edchat"); paste0("and tweet purpose had a chi-square value of ", round(x2_purpose,2), ","); paste0("(df = ", df_purpose, "), p = ", round(p_purpose,4), " and an effect size d = ", round(d_purpose,2), ".")
+```
+
+Print the contingency table and the results of the chi-square test. 
+
+```{r, include=TRUE, echo=FALSE}
+matrix_purpose_sums; sig_purpose
+```
+
 **Discourse**
+
+First, calculate margins of error (moe); then display the plot of tweet discourses.
 
 ```{r, include=FALSE}
 discourses <- rep(rownames(matrix_discourse_sums), 2)
@@ -746,7 +767,6 @@ in_or_out_disc <- factor(c(rep(colnames(matrix_discourse_sums)[1], 3),
                          levels=colnames(matrix_discourse_sums), ordered=TRUE)
 mydata_disc <- data.frame(discourses, values_disc, moe_disc, in_or_out_disc) %>%
     mutate(discourses = factor(discourses, levels=c(rownames(matrix_discourse_sums))))
-mydata_disc
 ```
 
 Now, display the plot.
@@ -765,7 +785,7 @@ ggplot(data=mydata_disc,
                   width = 0.2, 
                   position = position_dodge(width=0.5)
                   ) +
-    scale_fill_brewer(palette="Set1") +
+    scale_fill_manual(values = c("#0072B2", "#D55E00")) +
     theme(panel.background = element_rect(fill = "white", colour = "white"),
           panel.grid.major = element_blank(),
           panel.grid.minor = element_blank(),
@@ -782,7 +802,13 @@ ggplot(data=mydata_disc,
 ```
 
 ```{r, include=TRUE, echo=FALSE}
-matrix_discourse_sums; moe(matrix_discourse_sums)
+paste0("The two-way table test of association between the presence of the keyword #edchat"); paste0("and tweet discourse had a chi-square value of ", round(x2_discourse,2), ","); paste0("(df = ", df_discourse, "), p = ", round(p_discourse,4), " and an effect size d = ", round(d_discourse,2), ".")
+```
+
+Print the contingency table and the results of the chi-square test. 
+
+```{r, include=TRUE, echo=FALSE}
+matrix_discourse_sums; sig_discourse
 ```
 
 # Version/dependencies
