--- a/kludge.Rmd
+++ b/kludge.Rmd
@@ -383,6 +383,7 @@ freq_replies_expanded %>%
 ```
 
 ```{r, include=FALSE}
+hashtag_regex <- "#([0-9]|[a-zA-Z])+"
 url_regex <- "http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+"
 
 reply_count_expanded <- edchat_expanded_og %>% 
@@ -738,7 +739,7 @@ ggplot(data=mydata_purp,
           legend.title=element_text(size=28, family="serif"), 
           legend.text=element_text(size=22, family="serif")
           ) +
-    xlab("Tweet Purposes") + ylab("Proportion") + labs(fill="Reply Type") +
+    xlab("Tweet Purposes") + ylab("Percentage") + labs(fill="Reply Type") +
     geom_hline(yintercept=0, color="black", size = .75)
 #ggsave("tweet_purpose.png", width = 1 * 16, height = 1 * 9)
 ```
@@ -796,7 +797,7 @@ ggplot(data=mydata_disc,
           legend.title=element_text(size=28, family="serif"), 
           legend.text=element_text(size=22, family="serif")
           ) +
-    xlab("Tweet Discourses") + ylab("Proportion") + labs(fill="Reply Type") +
+    xlab("Tweet Discourses") + ylab("Percentage") + labs(fill="Reply Type") +
     geom_hline(yintercept=0, color="black", size = .75)
 #ggsave("tweet_discourse.png", width = 1 * 16, height = 1 * 9)
 ```
